package main

import (
	"log"
	"net"

	"golang.org/x/net/context"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
	pb "rpc-util/service/user/proto"
)

const (
	port = ":50051"
)

// server is used to implement helloworld.GreeterServer.
type server struct{}

// SayHello implements helloworld.GreeterServer
func (s *server) GetName(ctx context.Context, in *pb.NameRequest) (*pb.NameReply, error) {
	return &pb.NameReply{Message: "Hello one" + in.Name}, nil
}

func main() {
	lis, err := net.Listen("tcp", port)
	log.Println(">-------RUNNING USER++++ SERVICE")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	s := grpc.NewServer()
	pb.RegisterUserServer(s, &server{})
	// Register reflection service on gRPC server.
	reflection.Register(s)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
